# api/routes/supplier.js
@@ -3,18 +3,7 @@ var realm  = require('express-http-auth').realm('Private Area');
 
 const User = require('../models/users.js');
 const Admin = require('../models/admins');
-
-var checkUserAccess= function(req, res, next) {
-    User.findById(req.username).then(user => {
-        if ((user) && (user.password === req.password)) {
-            next();
-        } else {
-            res.status(403).send({
-                message: "error in password or username... check your credential!"
-            });
-        }
-    });
-};
+const Supplier= require('../models/suppliers');
 
 var checkForAdmin = function(req, res, next) {
     Admin.findById(req.username).then(admin => {
@@ -28,14 +17,14 @@ var checkForAdmin = function(req, res, next) {
     });
 };
 
-var CheckdminAndUserAccess = function(req, res, next) {
+var CheckAdminAndSupplierrAccess = function(req, res, next) {
     Admin.findById(req.username).then(admin => {
         if ((admin) && (admin.password === req.password)) {
             next();
         }
         else {
-            User.findById(req.username).then(user => {
-                if ((user) && (user.password === req.password)) {
+            Supplier.findById(req.username).then(supplier => {
+                if ((supplier) && (supplier.password === req.password)) {
                     next();
                 }
                 else {
@@ -43,31 +32,35 @@ var CheckdminAndUserAccess = function(req, res, next) {
                         message: "error in password or username... check your credential!"
                     });
                 }
+            }).catch(err => {
+                res.status(403).send({
+                    message: "Unauthorized... check your credential!"
+                });
             });
         }
     });
 };
-var userAccess = [realm, checkUserAccess];
+
 var AdminAccess = [realm, checkForAdmin];
-var adminAndUserAccess = [realm, CheckdminAndUserAccess];
+var adminAndSupplierAccess = [realm, CheckAdminAndSupplierrAccess];
 
 
 module.exports = (app) => {
-    const users = require('../controllers/users.js');
+    const suppliers = require('../controllers/suppliers.js');
 
     // Create a new User
-    app.post('/user', adminAndUserAccess,users.create);
+    app.post('/supplier',suppliers.create);
 
     // Retrieve all Users
-    app.get('/user', users.findAll);
+    app.get('/supplier',AdminAccess,suppliers.findAll);
 
     // Retrieve a single User with noteId
-    app.get('/user/:userId',adminAndUserAccess, users.findOne);
+    app.get('/supplier/:supplierId',adminAndSupplierAccess, suppliers.findOne);
 
     // Update a User with noteId
-    app.put('/user/:userId',adminAndUserAccess, users.update);
+    app.put('/supplier/:supplierId',adminAndSupplierAccess, suppliers.update);
 
     // Delete a User with noteId
-    app.delete('/user/:userId',adminAndUserAccess, users.delete);
+    app.delete('/supplier/:supplierId',adminAndSupplierAccess, suppliers.delete);
 
 }
